adicionados métodos de timeout.

--- a/webstoragePHP/main.html
+++ b/webstoragePHP/main.html
@@ -7,8 +7,8 @@
     <title>Login</title>
     <script>
         function verificarAluno() {
-            var ra = localStorage.getItem("ra");
-            if (ra != null) {
+            var login = localStorage.getItem("login");
+            if (login != null) {
                 window.location.href = 'home.html';
         } else {
             window.location.href = 'login.html';
